--- a/src/App.css
+++ b/src/App.css
@@ -203,24 +203,9 @@
   display: none !important;
 }
 
-.projects-grid {
-  display: grid;
-  grid-template-rows: repeat(2, 1fr);
-  grid-template-columns: repeat(3, 1fr);
-  gap: 30px;
-  width: 100%;
-  height: 100%;
-  color: white;
-  padding: 10px;
-  margin-top: 40px;
-}
-
 
 .projects-grid-element {
-  height: 350px;
-  border-radius: 50px;
   border: 2px solid darkgray;
-  position: relative;
 }
 
 .projects-grid-img {
@@ -230,14 +215,6 @@
   border-radius: 50px;
 }
 
-.tba {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 2rem;
-}
 
 .projects-grid-overlay {
   text-decoration: none;
@@ -301,20 +278,27 @@
 }
 
 .form-right {
-  display: grid;
-  grid-template-rows: repeat(4, 1fr);
-  grid-template-columns: 1fr 1fr; /* Each column takes up 1 fraction of the available space */
-  gap: 15px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  align-content: flex-start;
 }
 
 .input-right,
 .textarea-right {
+  display: block;
+  flex-grow: 1;
+  flex-basis: auto;
+  align-self: auto;
+  order: 0;
   font-size: 20px;
+  margin: 10px;
   padding: 20px 10px;
   border: 1px solid white;
   border-radius: 20px;
   background-color: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(30px);
   padding-left: 20px;
   transition: 0.2s ease;
   outline: 1px solid white;
@@ -346,9 +330,9 @@
   padding: 16px 32px;
   cursor: pointer;
   font-size: 1.3rem;
-  margin-right: 150px;
   border: none;
   margin-top: 50px;
+  width: 150px;
 }
 
 .leave-email {
@@ -374,7 +358,6 @@
 
 .email-input {
   color: black;
-  font-size: 1.8rem;
   border: none;
   background-color: transparent;
 }
