--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,7 @@
 .textBar {
   display: inline-block;
   color: #bdbdbd;
-  margin-left: -10px;
+  margin-left: -5px;
   animation: blinkingBar 0.7s linear infinite both;
 }
 
@@ -363,18 +363,12 @@
 }
 
 .email-submit-button {
-  padding: 20px 50px;
   border: none;
-  border-radius: 25px;
+  border-radius: 0px 20px 20px 0px; 
   background-image: linear-gradient(to right, #b06ab3, #4568dc);
   color: #fff;
   font-size: 1.3rem;
   cursor: pointer;
-  transition: background-color .3s ease-in-out;
-}
-
-.email-submit-button:hover {
-  background-color: #5e5dcd;
 }
 
 .email-input:focus,
