--- a/src/App.css
+++ b/src/App.css
@@ -294,7 +294,7 @@
   align-self: auto;
   order: 0;
   font-size: 20px;
-  margin: 10px;
+  /* margin: 10px; */
   padding: 10px 5px;
   border: 1px solid white;
   border-radius: 20px;
