--- a/src/App.css
+++ b/src/App.css
@@ -277,22 +277,17 @@
   margin-bottom: 50px;
 }
 
-.form-right {
+/* .form-right {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: flex-start;
   align-content: flex-start;
-}
+} */
 
 .input-right,
 .textarea-right {
-  display: block;
-  flex-grow: 1;
-  flex-basis: auto;
-  align-self: auto;
-  order: 0;
   font-size: 20px;
   /* margin: 10px; */
   padding: 10px 5px;
@@ -367,7 +362,7 @@
   border-radius: 0px 20px 20px 0px; 
   background-image: linear-gradient(to right, #b06ab3, #4568dc);
   color: #fff;
-  font-size: 1.3rem;
+  /* font-size: 1.3rem; */
   cursor: pointer;
 }
 
