--- a/src/App.css
+++ b/src/App.css
@@ -277,23 +277,29 @@
   margin-bottom: 50px;
 }
 
-/* .form-right {
+.form-right {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: flex-start;
   align-items: flex-start;
   align-content: flex-start;
-} */
+}
 
 .input-right,
 .textarea-right {
+  display: block;
+  flex-grow: 1;
+  flex-basis: auto;
+  align-self: auto;
+  order: 0;
   font-size: 20px;
-  /* margin: 10px; */
-  padding: 10px 5px;
+  margin: 10px;
+  padding: 20px 10px;
   border: 1px solid white;
   border-radius: 20px;
   background-color: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(30px);
   padding-left: 20px;
   transition: 0.2s ease;
   outline: 1px solid white;
